# odmrctl-web

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/odmr-compiler/: Cargo.toml  README.md
crates/odmr-compiler/src/: lib.rs
crates/odmr-compiler/tests/: generate_examples.rs
crates/odmr-config/: Cargo.toml  README.md
crates/odmr-device/: Cargo.toml  README.md
crates/odmr-executor/: Cargo.toml  README.md
crates/odmr-executor/src/: lib.rs
crates/odmr-executor/tests/: run_mock_end_to_end.rs
crates/odmr-harness/: Cargo.toml  README.md
crates/odmr-logging/: Cargo.toml  README.md
crates/odmr-oe1022d/: Cargo.toml  README.md
crates/odmr-recipe/: Cargo.toml  README.md
crates/odmr-recipe/src/: lib.rs  types.rs  validation.rs
crates/odmr-recipe/tests/: recipe_integration_tests.rs
crates/odmr-replay/: Cargo.toml  README.md
crates/odmr-safety/: Cargo.toml  README.md
crates/odmr-safety/src/: lib.rs
crates/odmr-safety/tests/: generate_safety_reports.rs
crates/odmr-smb100a/: Cargo.toml  README.md
crates/odmr-types/: Cargo.toml  README.md
docs/GUI/: GUI-M0-implementation-notes.md  GUI-M0-spec.md
docs/adr/: ADR-001-tauri-ui.md  ADR-002-rust-oe1022d-core.md  ADR-003-smb100a-scpi-lan-socket.md  ADR-004-no-ai-live-hardware.md  ADR-005-raw-bin-before-csv.md  ADR-006-gui-m0-mock-only-boundary.md
docs/architecture/: ARCHITECTURE.md
docs/prd/: 00_main_prd_v0.2.md  01_architecture_prd_v0.2.md  02_device_registry_connection_prd_v0.2.md  03_oe1022d_acquisition_prd_v0.2.md  04_recipe_json_schema_prd_v0.2.md  05_recipe_compiler_executor_prd_v0.2.md  06_timing_sync_averaging_prd_v0.2.md  07_data_logging_file_format_prd_v0.2.md  08_gui_tauri_chart_prd_v0.2.md  08_gui_tauri_chart_prd_v0.3.md  09_magnetic_field_planner_prd_v0.2.md  10_safety_interlock_prd_v0.2.md  11_harness_mock_replay_prd_v0.2.md  12_agent_workflow_prd_v0.2.md  deep-research-report.md
examples/: oe1022d_labview_channel_output_sine_output_commands.json  oe1022d_labview_formula_system_commands.json  oe1022d_labview_input_filter_commands.json  oe1022d_labview_reference_signal_commands.json  smb100a_fig1_main_settings_commands.json  smb100a_fig2_mod_gen_menu_settings_commands.json  smb100a_fig3_lf_generator_output_settings_commands.json  smb100a_fig4_modulation_menu_settings_commands.json  smb100a_fig5_frequency_modulation_settings_commands.json  smb100a_fig6_frequency_modulation_on_settings_commands.json  station.mock.json
reverse_application/: AGENTS.md
schemas/: dry_run_plan.schema.json  execution_report.schema.json  recipe.schema.json  resolved_recipe.schema.json  run_event.schema.json  run_manifest.schema.json  safety_limit.schema.json  safety_report.schema.json  station.schema.json
scripts/: check-agents-md.sh  check-command-catalog.sh  check-consistency.sh  check-docs-links.sh  check-frontend-hardware.sh  check-prd-adr-index.sh  check-realtime-csv.sh  check-schema-examples.sh
(+448 files in other folders)
