[package]
name = "odmr-recipe"
version = "0.1.0"
edition = "2021"
description = "Layer 2 — Recipe data structures, JSON loading and validation."
license = "MIT OR Apache-2.0"

[dependencies]
odmr-types = { path = "../odmr-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
