[package]
name = "odmr-safety"
version = "0.1.0"
edition = "2021"
description = "Layer 3 — Static safety interlock engine. ResolvedRecipe + SafetyLimit → SafetyReport."
license = "MIT OR Apache-2.0"

[dependencies]
odmr-recipe = { path = "../odmr-recipe" }
odmr-types = { path = "../odmr-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
