[workspace]

[package]
name = "odmr-gui-m0"
version = "0.1.0"
description = "ODMR Automation GUI-M0 Mock Viewer"
authors = ["ODMR Automation Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: GUI-M0 deliberately does NOT depend on any workspace hardware crates.
# The following crates are FORBIDDEN in this Cargo.toml:
# - odmr-executor
# - odmr-smb100a
# - odmr-oe1022d
# - odmr-device
# - odmr-compiler
# - odmr-safety
# - odmr-logging
